2000-10-0(  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/GSTextStorage.m: 
	_setup() corrected a problem from the last change
	Removed obsolete super calls in GSTextInfo coding methods.
	* Source/NSAttributedString.m: 
	Small correction in [fixParagraphStyleAttributeInRange]
	
2000-10-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTextStorage.m: Removed some depen dencies on private
	classes of base library.

2000-10-02  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/NSWindow.m: 
	[_initBackendWindow] always redisplay _wv
	[setFrame:display:] set the frame of _wv directly if deferred.
	This changes make the save panel usable again.
	* Source/NSStringDrawing.m: 
	Convert glyphs to font encoding in drawRun().
	Removed unused code. 
	
2000-10-01  Fred Kiefer  <FredKiefer@gmx.de>

	* Header/gnustep/gui/NSText.h:
	Moved ivar _textContainer from NSTextView to here.
	* Header/gnustep/gui/NSTextView.h:
	Removed ivar _textContainer. Added some delegate messages.
	Two new NSTextView like methods for text container handling.	
	* Source/NSText.m: 
	Moved the text container handling from NSTextView to here and
	corrected it.
	* Source/NSTextView.m: 
	Use text container implementation from super class.
	* Source/NSLayoutManager.m:
	Implemented [firstTextView].
	* Source/GSSimpleLayoutManager.h: 
	Removed additional method [setFirstTextView]
	* Source/GSSimpleLayoutManager.m: 
	Switched to use the text container for size information.
	Implemented [textContainerChangedGeometry].
	* Source/NSTextContainer.m: 
	In [setTextView] let the text view send frame changed notifications.
	Check text view in [_textViewFrameChanged:].
	Don't add observer if text view is nil in
	[setHeightTracksTextView:] and [setWidthTracksTextView:]
	* Source/NSView.m: 
	In [display] check if the _visibleRect is still valid.
	
2000-09-28  Adam Fedor  <fedor@gnu.org>

	* Source/NSGraphicsContext.m (-_addDragTypes:toWindow:): Change to
	take window object, since window number may not exist for deferred win.